--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
+    "mqtt": "^4.2.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
