--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "mqtt": "^4.2.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
