--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "leaflet-sidebar-v2": "^3.2.3",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.6.0"
   },
